<resources>
    <string name="app_name">APP_JOHN</string>
    <string name="primer_activity">Mi Primer Aplicación</string>
    <string name="call">Call</string>
    <string name="url">Google</string>
    <string name="alarma">Alarma</string>
    <string name="email">correo</string>
    <string name="google">Google</string>
    <string name="llamar">llamar</string>
    <string name="Email">Email</string>
    <string name="marcar">marcar</string>
    <string name="numero">623260768</string>
    <string name="alarm">Alarm</string>
    <string name="txtgoogle">Google</string>
    <string name="salir">Salir</string>
    <string name="texto">\"Truco o trato, la noche de las brujas ha llegado para hechizarte con diversion macabra.\"</string>
    <string name="tex_inicio">Clase PMPM 2023/2024</string>
    <string name="lo_hecho">" "</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrate">¿No tienes Cuenta? Registrate</string>
    <string name="login">Login</string>
    <string name="registraterse">Registrate</string>
    <string name="sing_up">Sing Up</string>
    <string name="registrarse">Registrate</string>
    <string name="regresar">¿Ya tienes Cuenta?  Ingresa</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="bienvenida"> " " </string>
    <string name="nombre">" "</string>
    <string name="clase">Clase PMDM 2023-2024</string>
    <string name="calabazapp">CalabazApp: La App de Halloween</string>
    <string name="dados">Dados</string>
    <string name="chiste">   Esto era uno, que era tan tonto, tan tonto, tan tonto, que echó una carrera
    el sólo y quedó segundo</string>
    <string name="describe">Chicos de PMDM del Virgen del Carmen, soy john. Este ejemplo, te muestra un botón donde escuchar un chiste</string>
    <string name="chistes">Chistes</string>
    <string name="jugar">Jugar</string>
    <string name="jugador">JUGADOR</string>
    <string name="tiradas">TIRADAS:</string>
    <string name="edad">EDAD:</string>
    />
</resources>