<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:background="@drawable/fondo_terror"
    android:layout_height="match_parent"
    tools:context=".dao.Principal">

    <ImageView
        android:id="@+id/image_luces"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyle"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:indeterminate="true"
        android:indeterminateDuration="500"
        android:indeterminateDrawable="@drawable/progresbar1"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layou_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                app:cardCornerRadius="25dp"
                app:cardBackgroundColor="#B3F4FF81"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:elevation="2dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.6">

                        <ImageView
                            android:id="@+id/image_view1"
                            android:layout_width="80dp"
                            android:layout_height="70dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginStart="10dp"
                            android:background="@mipmap/logo1_round"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_bienvenida"
                            android:layout_width="match_parent"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:text="@string/bienvenido"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/txt_input_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/lo_hecho"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_gravity="center_horizontal|center_vertical"/>

                        <TextView
                            android:id="@+id/text_clase"
                            android:layout_width="match_parent"
                            android:textSize="17sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:text="@string/clase"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:background="@mipmap/halloween_icono_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />




            <TextView
                android:id="@+id/textApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_txt"
                android:text="@string/calabazapp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_call"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#00FFFFFF"
                            android:contentDescription="@string/llamar"
                            android:src="@mipmap/llamar" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_url"
                            android:layout_width="84dp"
                            android:layout_height="98dp"
                            android:backgroundTint="#00FBFBF7"
                            android:contentDescription="@string/google"
                            android:src="@drawable/google_g_2015"
                            android:text="@string/url" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_dados"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#00FBFBF7"
                            android:contentDescription="@string/login"
                            android:src="@mipmap/dado_round"/>




                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textCall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/call"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textGoogle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtgoogle"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/text_dados"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dados"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />



                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_alarma"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#00FBFBF7"
                            android:contentDescription="@string/alarma"
                            android:src="@mipmap/alarm"
                            android:text="@string/alarma" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#00FBFBF7"
                            android:contentDescription="@string/email"
                            android:src="@mipmap/email_azul_round"
                            android:text="@string/email" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btn_chiste"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#00FBFBF7"
                            android:contentDescription="@string/salir"
                            android:src="@mipmap/chiste_round" />



                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textAlarm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarm"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"/>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/textEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Email"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/text_chiste"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chistes"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"/>


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:elevation="@dimen/cardview_compat_inset_shadow"
                app:cardCornerRadius="25dp"
                android:backgroundTint="#CED695"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="50dp"
                    android:layout_height="match_parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/calabazas"
                        app:cardCornerRadius="50dp" />

                    <TextView
                        android:id="@+id/text_hallow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="italic"
                        android:textColor="@color/black"
                        android:text="@string/texto" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>